# ogn-jumplog

./: .gitignore  README.md  pyproject.toml
src/jumplog/: __init__.py  __main__.py  cli.py  ogn.py  pdf.py
src/jumplog/web/: __init__.py  app.py
src/jumplog/web/static/: app.js  style.css
src/jumplog/web/templates/: index.html
