[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jumplog"
version = "0.1.0"
description = "Pre-fill a daily jump-operations log sheet PDF from OGN FLARM tracking data."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Unicornlines" }]
dependencies = [
    "reportlab>=4.0",
    "requests>=2.31",
    "python-dateutil>=2.8",
    "flask>=3.0",
]

[project.scripts]
jumplog = "jumplog.cli:main"
jumplog-web = "jumplog.web.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"jumplog.web" = ["templates/*.html", "static/*"]
